# mcp-stdio-bridge

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  config.example.yaml  docker-compose.yaml  mlc_config.json  pyproject.toml  schema.json
.github/workflows/: ci.yml  publish.yml
docs/: architecture.md  configuration.md  deployment.md  mcp-servers.md  roadmap.md  security.md  workflows.md
examples/: docker-tool-wrapper.yaml  git-wrapper.yaml  security-patterns.yaml  sqlite-proxy.yaml  wp-cli-wrapper.yaml
src/mcp_stdio_bridge/: __init__.py  activity_monitor.py  config.py  logging_utils.py  main.py  middleware.py
src/mcp_stdio_bridge/mode/: __init__.py  proxy.py  wrapper.py
src/mcp_stdio_bridge/transport/: __init__.py  sse.py  stdio.py
tests/: test_config.py  test_dynamic_reload.py  test_logging_utils.py  test_main.py  test_middleware.py  test_mode_proxy.py  test_mode_wrapper.py  test_signal_handling.py  test_transport_sse.py  test_transport_stdio.py  test_wrapper_timeout.py
